--- a/src/components/sign-In/signIn.scss
+++ b/src/components/sign-In/signIn.scss
@@ -45,6 +45,13 @@ position:absolute
     font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
     font-size: 16px;
     margin-left: 0;
+    color: #737373;
+    padding: 30px 0;
+    margin: 0 auto;
+    max-width: 1000px;
+    width: 90%;
+    font-size: 1em;
+    -webkit-font-smoothing: antialiased;
 }
 
 .mb-4 input {
@@ -54,7 +61,7 @@ position:absolute
 
   #sign-in-btn{
     background-color: #e50914;
-    width:29vh;
+ 
     border-radius: 4px;
     font-size: 16px;
     font-weight: 500;
@@ -67,10 +74,11 @@ position:absolute
  font-weight: 400
   }
   .input-container{
-    padding-bottom: 16px;
     border: 0;
     border-radius: 4px;
     position: relative;
+    padding-top: 30px;
+  
   
   }
   .form-input{
@@ -79,7 +87,19 @@ position:absolute
     color: #fff;
     height: 50px;
     line-height: 50px;
-    padding: 16px 20px 15px;
+    padding: 16px 75px 15px ;
+    border-bottom: 2px solid #e87c03;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+    bottom: 0;
+    content: "";
+    display: block;
+
+    left: 0;
+    pointer-events: none;
+ 
+    width: 100%;
+   
 
   }
   .signIn-label{
@@ -107,11 +127,73 @@ position:absolute
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    margin: 0;
+    margin: 0vh 35rem;
     min-height: 515px;
-    padding: 20px 0 30px;
+    padding: 25px 50px 30px;
     width: 100%;
  }
+.heading-footer{
+  color: #737373;
+  box-sizing: border-box;
+  font-size: 13px;
+  max-width: 1000px;
+}
 
 
+.main-heading-footer{
+  margin: 0 0 30px;
+  padding: 0;
+  color: #737373;
+}
+.dropdown-container{
+  padding-right: 26px;
+  text-indent: 0;
+ 
+ 
+}
+.dropdown-btn{
+ 
+  display: inline-block;
+ 
+  border: 1px solid #333;
+ 
+  
+}
+.dropdown-option{
+  font-weight: normal;
+  display: block;
+  min-height: 1.6em;
+  padding: 12px 2px 1px;
+  padding-right: 26px;
+  text-indent: 0;
+  font-size: 13px;
 
+  
+}
+#form-toogle{
+  padding: 51px 60px 85px 88px;
+}
+.paragraph-container{
+  font-size: 13px;
+  width: 18rem;
+}
+.new-netflix-container{
+  color: #737373;
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 16px;
+}
+.new-signIn{
+  color: #737373;
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 30px;
+  display:flex;
+  align-items: baseline;
+  padding-bottom: 12px;
+ 
+}
+.sign-up-btn{
+  color: #fff;
+  padding-left: 8px;
+}
